pghoard 1.2.0 (2016-XX-XX)
==========================

* Support for Python 3.3
* Creating new basebackups by timer can be disabled entirely for a site by
  removing the basebackup_interval_hours option or setting it to a null
  value
* Trim log format when logging to journal under systemd
* Emit a warning when running under systemd without python-systemd installed
* Test improvements

pghoard 1.1.0 (2016-04-05)
==========================

* Consider last basebackup's start time instead of completion time for
  scheduling the next basebackup
* pghoard_create_keys can now update an existing configuration file
* Support for OpenStack Swift object storage
* More generic object storage configuration.  All configuration keys for
  object stores are passed as-is to the implementation.  This also meant
  that some defaults were dropped: bucket_name and container_name must be
  manually set, they no longer default to `pghoard`.
* New test cases to validate object storage interfaces - the tests revealed
  a couple of minor issues which have been fixed in this release
* ``pghoard`` can now be built from a checkout of a tag, namely generation
  version.py no longer requires a .git directory
* Documentation and build process improvements

pghoard 1.0.0 (2016-03-16)
==========================

* Support compressing basebackups on the fly
* Add archive_sync command to sync archive / check archive integrity
* Support different recovery_targets
* Support encryption and integrity protection of the backup files
* Snappy compression support
* Better unittests (also with an actual PostgreSQL)
* Require Python3.4 or newer
* Support prefetching files during restore
* Bug fixes

pghoard 0.9.0 (2015-06-19)
============================

* Initial release